add jvm mertics